swagger züg
